--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Prueba
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Loved+by+the+King&display=swap" rel="stylesheet">
+    <title>Hola, como estás linda?</title>
+</head>
+<body>
+    <h1> 🍀❤️ VOS PODÉS HERMOSA ❤️🍀 </h1>
+    <img src="./fondo1.jpeg" alt="">
+</body>
+</html>
